<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_echosounder</name>
  <version>0.0.0</version>
  <description>Riptide's echosounder driver Sea Scan Echo</description>
  <maintainer email="quentin.brateau@ensta-bretagne.org">quentin</maintainer>
  <license>GNU General Public License version 3</license>

  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
